# oncall

./: Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_display_name.py  003_add_notes.py  004_ticket_notes_thread.py
docs/: user-guide.md
frontend/templates/: dashboard.html
oncall/: auth.py  config.py  db.py  main.py  models.py  routes.py  schemas.py  slack_handlers.py
oncall.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_routes.py  test_slack_handlers.py
